@@ -21,7 +21,7 @@ git clone https://github.com/lawrenceleejr/Ext_RestFrames.git; cd Ext_RestFrames
 svn co svn+ssh://svn.cern.ch/reps/atlasoff/PhysicsAnalysis/SUSYPhys/SUSYTools/tags/SUSYTools-00-06-15 SUSYTools
 
 ### from SUSYTools/doc/README
-#rc checkout SUSYTools/doc/packages.txt
+rc checkout SUSYTools/doc/packages.txt
 
 
 # compile
